Refactor sales project: remove outputs, pipelines, tables, and variables
- Deleted outputs.tf, pipelines.tf, tables.tf, and variables.tf from the sales project.
- Updated variables.tf in the projects directory to improve descriptions.
- Removed legacy Glue job scripts for customer delta and daily sales aggregation.
- Added new project fin01 with initial job, table, and pipeline configurations.
- Implemented a generic auto-discovery test for Glue job scripts to ensure valid syntax and structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-# ─── CI — Continuous Integration ──────────────────────────────────
+# ─── CI - Continuous Integration ──────────────────────────────────
 # Runs on pushes and pull requests, but ONLY when relevant files change.
-# Reads all config from domain.json — no hardcoded project names.
+# Reads all config from domain.json - no hardcoded project names.
 
 name: CI
 
