--- a/infrastructure/environments/dev/backend.conf
+++ b/infrastructure/environments/dev/backend.conf
@@ -1,5 +1,4 @@
-# Auto-generated from domain.json — run `setup/init-terraform.sh` to regenerate.
-# bucket = "{domain_abbr}-tfstate-{env}" | dynamodb_table = "{domain_abbr}-tflock-{env}"
+# Auto-generated from domain.json - run setup/init-terraform.sh to regenerate.
 bucket         = "nl-tfstate-dev"
 region         = "eu-west-1"
-dynamodb_table = "nl-tflock-dev"
+use_lockfile   = true
