--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "core"
 version = "1.0.0"
-description = "Data Domain — shared core library for Glue Spark jobs."
+description = "Data Domain - shared core library for Glue Spark jobs."
 readme = "README.md"
 license = {text = "Proprietary"}
 requires-python = ">=3.11"
@@ -37,7 +37,7 @@ dev = [
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["core", "core.*"]
-# Jobs are NOT packaged — they remain standalone scripts uploaded to S3.
+# Jobs are NOT packaged - they remain standalone scripts uploaded to S3.
 
 [tool.setuptools.package-dir]
 "" = "src"
