--- a/infrastructure/environments/int/backend.conf
+++ b/infrastructure/environments/int/backend.conf
@@ -1,4 +1,4 @@
 # Auto-generated from domain.json - run setup/init-terraform.sh to regenerate.
-bucket         = "nl-tfstate-int"
+bucket         = "f01-tfstate-int"
 region         = "eu-west-1"
 use_lockfile   = true
