fix: auto-create tfstate S3 buckets before terraform init
The CD workflows failed because the backend S3 bucket (f01-tfstate-prod)
did not exist yet. Added an 'Ensure tfstate bucket' step to all deploy
workflows that creates the bucket (with versioning + public access block)
if it does not already exist.

Also enhanced setup/init-terraform.sh with --create-buckets flag for
local/manual setup.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -87,6 +87,24 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
+      - name: Ensure tfstate bucket
+        if: needs.changes.outputs.infra == 'true'
+        run: |
+          BUCKET="${ABBR}-tfstate-${ENV}"
+          if ! aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
+            echo "Creating backend bucket: $BUCKET"
+            aws s3api create-bucket --bucket "$BUCKET" \
+              --region "$AWS_REGION" \
+              --create-bucket-configuration LocationConstraint="$AWS_REGION"
+            aws s3api put-bucket-versioning --bucket "$BUCKET" \
+              --versioning-configuration Status=Enabled
+            aws s3api put-public-access-block --bucket "$BUCKET" \
+              --public-access-block-configuration \
+              BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
+          else
+            echo "Backend bucket already exists: $BUCKET"
+          fi
+
       - name: Terraform Init
         if: needs.changes.outputs.infra == 'true'
         working-directory: infrastructure/environments/${{ env.ENV }}
