refactor: tfstate bucket convention tfstate-{AccountId}-{env}
- Bucket name derived from AWS credentials (aws sts get-caller-identity)
- No hardcoded values in domain.json, workflows, or scripts
- Workflows pass backend config inline via -backend-config flags
- init-terraform.sh generates local backend.conf from live credentials
- backend.conf added to .gitignore (account-specific, auto-generated)
- Removed tracked backend.conf files
- Updated setup/README.md with new convention and CLI examples

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -89,7 +89,13 @@ jobs:
       - name: Terraform Init
         if: needs.changes.outputs.infra == 'true'
         working-directory: infrastructure/environments/${{ env.ENV }}
-        run: terraform init -backend-config=backend.conf
+        run: |
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          REGION=$(jq -r .aws_region "$GITHUB_WORKSPACE/domain.json")
+          terraform init \
+            -backend-config="bucket=tfstate-${ACCOUNT_ID}-${ENV}" \
+            -backend-config="region=${REGION}" \
+            -backend-config="use_lockfile=true"
 
       - name: Terraform Plan
         if: needs.changes.outputs.infra == 'true'
