refactor: simplify tfstate bucket to tfstate-{AccountId}
Each AWS account represents one environment, so the -env suffix
is redundant. Convention is now just tfstate-{AccountId}.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -94,7 +94,7 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           REGION=$(jq -r .aws_region "$GITHUB_WORKSPACE/domain.json")
           terraform init \
-            -backend-config="bucket=tfstate-${ACCOUNT_ID}-${ENV}" \
+            -backend-config="bucket=tfstate-${ACCOUNT_ID}" \
             -backend-config="region=${REGION}" \
             -backend-config="use_lockfile=true"
 
