migrate domain.json to setup/domain.json and update references

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 # ─── CI - Continuous Integration ──────────────────────────────────
 # Runs on pushes and pull requests, but ONLY when relevant files change.
-# Reads all config from domain.json - no hardcoded project names.
+# Reads all config from setup/domain.json - no hardcoded project names.
 
 name: CI
 
@@ -56,7 +56,7 @@ jobs:
               - 'src/jobs/**'
             infra:
               - 'infrastructure/**'
-              - 'domain.json'
+              - 'setup/domain.json'
 
   # ── Lint & Test (only when Python code changed) ──────────────────
   test:
