feat: VPC isolation, prevent_destroy, PR plan comments, data quality, fix merge_iceberg
- S3 buckets: add lifecycle { prevent_destroy = true } to all buckets
  managed by the s3_bucket module — prevents accidental data loss.

- VPC/networking: reactivate foundation VPC, private subnets, S3 gateway
  endpoint, Glue Interface endpoint, and Glue job security group (self-
  referencing). Subnet CIDRs are auto-derived from vpc_cidr (DRY, no
  extra variable). One domain-level aws_glue_connection 'NETWORK' wires
  all Glue jobs into the VPC. Connection name flows: foundation outputs
  → environment → projects aggregator → each project → each job.

- Glue jobs: all job modules now set connections = [var.glue_connection_name]
  so workers run inside the private subnets automatically.

- CI/CD: add terraform-plan-pr.yml that posts a sticky terraform plan
  comment on every PR targeting dev/int/main when infra files change.
  AWS role is resolved from base_ref (dev/int/prod) via OIDC. CI workflow
  now publishes test results as PR checks via dorny/test-reporter.

- fix: merge_iceberg() now generates a UUID-based temp view name per call
  to prevent collisions when multiple MERGEs run concurrently.

- feat: new src/core/quality/ module with DataQualityChecker — fluent API
  for not_null, unique, value_in_set, min_value, max_value, row_count_min.
  No external dependencies (PySpark native). assert_all_passed() raises
  DataQualityError on failure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ on:
 permissions:
   contents: read
   id-token: write
+  checks: write
+  pull-requests: write
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -86,7 +88,17 @@ jobs:
 
       - name: Run unit tests
         run: |
+          mkdir -p reports
           pytest tests/ -v --tb=short --junitxml=reports/junit.xml
+
+      - name: Publish test results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Unit Tests
+          path: reports/junit.xml
+          reporter: java-junit
+          fail-on-error: false
 
       - name: Upload test report
         if: always()
